# tdd-basics

./: .coverage  main.py  pyproject.toml  pyrefly.toml
02_leap_year/: leap_year.py  test_leap_year.py
_01_fizz_buzz/: fizz_buzz.py  test_fizz_buzz.py
_02_leap_year/: test_leap_year.py
_03_string_calculator/: str_calculator.py  test_str_calculator.py
_04_stack/: stack.py  test_stack.py
_05_prime_factors/: prime_factors.py  test_prime_factors.py
_06_bowling_game/: .coverage  game.py
_07_roman_numeral_converter/: roman_num.py  test_from_int_to_roman.py  test_from_roman_to_int.py
_08_tennis/: test_score.py
birthday_greetings/: README.md
bowling_game/: test_game.py
mars_rover/: README.md
monty_hall/: README.md
shopping_basket/: README.md
sort_algorithms/exchange_sort/: sort_func.py  test_sort_func.py
sort_algorithms/quick_sort/: sort_func.py
tennis_game/: README.md
uncle_bob_demo/: stack.py  test_stack.py
xmas_carol/: README.md
yatzy/: README.md
