[project]
name = "tdd-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyrefly>=0.20.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-watcher>=0.4.3",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = "."
python_functions = "test_*"

